# divewidgets

./: .bumpversion.cfg  .coveragerc  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  divewidgets.json  install.json  meta.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  webpack.config.js
css/: widget.css
divewidgets/: __init__.py  _frontend.py  _version.py  magic.py  widget.py
divewidgets/nbextension/: extension.js
divewidgets/tests/: conftest.py  test_example.py  test_nbextension_path.py
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: main.ipynb
src/: editorsetup.ts  extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
